--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
                 <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
         </properties>
 <dependencies>
+	<dependency>
+        <groupId>com.baeldung</groupId>
+        <artifactId>maven-snapshot-repository</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </dependency>
 <dependency>
 <groupId>org.springframework.boot</groupId>
 <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -77,6 +82,11 @@
 
 	
 </repository>
+	<snapshotRepository>
+        <id>nexus-snap</id>
+        <name>nexus-snap</name>
+       <url>http://172.10.0.140:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
 </distributionManagement>
 
 <build>
